--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Котики</h1>
     <div id="cats"></div>
 </body>
-<script src="cats.js"></script>
+<script type="module" src="script.js"></script>
 <link rel="stylesheet" href="cats.css">
 </html>
